# mirael

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  lint.bat  scratch.txt  vcpkg.json
.github/workflows/: ci.yml
doc/: GraphExecution.md  ImageHandling.md  ScriptNode.md  TechDebt.md
doc/future_state/: InfiniteLoops.md  SubObjects.md
docs/: GettingStarted.md
examples/: 1-oldskool-effect-demo.mir  2-script-basics.mir  3-plasma-effect.mir  4-cyan-bands.mir
include/: app.hpp  applet.hpp  box.hpp  color.hpp  debug.hpp  graphics.hpp  testapplet1.hpp  testapplet2.hpp  uistate.hpp  untangleapplet.hpp  vector.hpp
include/app/: app.hpp  applet.hpp  applet_graph_types.hpp  box.hpp  boxapplet.hpp  build_info.hpp  color.hpp  debug.hpp  example_applet.hpp  fractal.hpp  fractal_applet.hpp  frame_limiter.hpp  graph.hpp  graph.tpp  graph_animators.hpp  graph_detail.hpp  graph_generators.hpp  graph_interaction_applet.hpp  graph_interaction_applet.tpp  graph_manipulations.hpp  graph_manipulators.hpp  graphics.hpp  known_applets.hpp  mirael_glm_ext.hpp  simulation_timer.hpp  territoriesapplet.hpp  territoriesmap.hpp  testapplet1.hpp  testapplet2.hpp  traits.hpp  untangle_applet.hpp  untangleapplet.hpp  utility.hpp
include/sim/: placeholder.md
include/ui/: app.hpp  applet.hpp  box.hpp  boxapplet.hpp  debug.hpp  framelimiter.hpp  graphics.hpp  territoriesapplet.hpp  testapplet1.hpp  testapplet2.hpp  untangleapplet.hpp
res/fonts/: Inter-Regular_ttf.cpp
res/win32/: make_icon.py  mirael.rc
src/: App.cpp  App.h  BucketCycle.h  Diagnostics.cpp  FrameMetricsBucket.h  Graph.cpp  Graph.h  GraphSnippet.h  ImGuiEx.cpp  ImGuiEx.h  Library.cpp  Library.h  Mailbox.h  NfdShim.cpp  NfdShim.h  Node.cpp  Node.h  NodeCore.h  NodeEditorEx.cpp  NodeEditorEx.h  NodeTypeRegistry.cpp  NodeTypeRegistry.h  Project.cpp  Project.h  ProjectExplorer.cpp  ProjectExplorer.h  Properties.cpp  Runner.cpp  Runner.h  ScriptEnv.cpp  ScriptEnv.h  Settings.cpp  TripleBuffer.h  ValueBuffer.h  app.cpp  app.h  box.cpp  boxapplet.cpp  color.cpp  data.h  (+33 more)
src/app/: app.cpp  app_pch.hpp  applet.cpp  box.cpp  boxapplet.cpp  build_info.cpp  color.cpp  example_applet.cpp  fractal_applet.cpp  frame_limiter.cpp  framelimiter.cpp  graph.cpp  graph_animators.cpp  graph_generators.cpp  graph_manipulations.cpp  graph_manipulators.cpp  graphics.cpp  territoriesapplet.cpp  territoriesmap.cpp  testapplet1.cpp  testapplet2.cpp  untangle_applet.cpp  untangleapplet.cpp  utility.cpp
src/node_types/: Comment.cpp  Comment.h  Counter.cpp  Counter.h  Display.cpp  Display.h  Script.cpp  Script.h  ScriptCore.cpp  ScriptCore.h  Switch.cpp  Switch.h  Value.cpp  Value.h  all_node_types.h  comment.cpp  comment.h  constant.cpp  constant.h  display.cpp  display.h  script.cpp  script.h  switch.cpp  switch.h  value.cpp  value.h
src/os_specific/: os_win32.cpp  os_win32.h
src/sim/: placeholder.md
src/ui/: app.cpp  box.cpp  boxapplet.cpp  color.cpp  framelimiter.cpp  graphics.cpp  territoriesapplet.cpp  testapplet1.cpp  testapplet2.cpp  ui_pch.hpp  untangleapplet.cpp
tests/: directed_graph_tests.cpp  graph_tests.cpp  misc_graph_tests.cpp  sanity_check.cpp  undirected_graph_tests.cpp
